Fix h2 (navigation) horizontal overflow

--- a/admin/style/default.css
+++ b/admin/style/default.css
@@ -1694,8 +1694,8 @@ body.dark-mode.upgrade-mode .expand-mm {
 /* ------------------------------------------------------------------ titres */
 /* fil d'ariane */
 #content > h2 {
-  padding: 0 1em 0.5em 1em;
-  margin: 0 -1em 1em -1em;
+  padding: 0 0.75em 0.5em 0.75em;
+  margin: 0 -0.5em 1em -0.75em;
   background: var(--breadcrumb-background);
   border-bottom: 1px solid var(--breadcrumb-border);
 }
