--- a/admin/style/scss/partials/_markup.scss
+++ b/admin/style/scss/partials/_markup.scss
@@ -3,8 +3,8 @@
 /* fil d'ariane */
 
 #content > h2 {
-  padding: 0 1em 0.5em 1em;
-  margin: 0 -1em 1em -1em;
+  padding: 0 0.75em 0.5em 0.75em;
+  margin: 0 -0.5em 1em -0.75em;
   background: var(--breadcrumb-background);
   border-bottom: 1px solid var(--breadcrumb-border);
 }
